<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="address">Address</string>

    <string name="app_name">GCLO</string>

<!--    Google Map API Key-->
<!--    new generated-->
    <string name="google_map_api_key" translatable="false">AIzaSyBKx5bB3_U6-dVRtFSoQwRc_GiDC3V5TDs</string>
<!--    <string name="google_map_api_key" translatable="false">AIzaSyDB6FBT3tC3V7OSweL03JVozVQYYrZCyCU</string>-->
    <string name="map_api_key">AIzaSyDjAljWSzMxckAweW5JH25HxjZ-CnH58wo</string>

    <string name="confirm_password">Confirm Password</string>

    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="edit">Edit</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter your email</string>


    <string name="forgot_password">Forgot Password</string>
    <string name="gender">Gender</string>
    <string name="google_storage_bucket">gps-application-de939.appspot.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="id">ID:</string>

    <string name="lat">Lat</string>
    <string name="location">Location</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="lon">Lon</string>


    <string name="person_name">Person Name</string>
    <string name="name">Name</string>

    <string name="nav_close">Nav Close</string>
    <string name="nav_open">Nav Open</string>
    <string name="password">Password</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="phone">Phone Number</string>
    <string name="please_verify_your_email_id">Please verify your email id</string>
    <string name="post">Post</string>
    <string name="profile">Profile</string>
    <string name="project_id">gps-application-de939</string>
    <string name="receive_email">You will receive a reset password link on your email id.</string>

    <string name="register">Registeration</string>

    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="scan">Scan</string>
    <string name="search_menu_title">Search</string>

    <string name="signup">Sign Up</string>

    <string name="username">Username</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="write_message">Write message here</string>
    <string name="zone">Zone</string>
    <string name="cancel">Cancel</string>
    <string name="write_here">Write here</string>
    <string name="change_profile_photo">Change Profile Photo</string>

    <string name="password_atleast_character_long">Password must be at-least 6 character long</string>
    <string name="enter_password">Enter Password</string>


    <string name="receive_data">Receive Data</string>
    <string name="distance">Distance</string>
    <string name="help">Help</string>
    <string name="connect">Connect</string>

    <!--Sample test ad-->
    <string name="app_ad_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="disconnect">Disconnect</string>
    <string name="bot_message">Bot Message</string>
    <string name="user_message">User Message</string>
    <string name="time">time</string>
    <string name="sender">sender</string>
    <string name="receiver">Receiver</string>
    <string name="verify">Verify</string>
    <string name="auto_scroll">Auto Scroll</string>
    <string name="person_id">Person Id</string>
    <string name="female">Female</string>
    <string name="terminal">Terminal</string>
    <string name="devices">Devices</string>
    <string name="map">Map</string>
    <string name="chat">Chat</string>
    <string name="person_details">Person Details</string>
    <string name="other">Other</string>
    <string name="setting">Setting</string>
    <string name="about_us">About us</string>
    <string name="delete_account">Delete Account</string>

</resources>
