<?xml version="1.0" encoding="utf-8"?>

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/siwperefreshlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_bg1"
    android:elevation="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgProfileImage"
            android:layout_width="130dp"
            android:layout_height="120dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginStart="141dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="140dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background"
            app:civ_border_width="0dp" />

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgProfileImage"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvPost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvUserName"
            android:gravity="center"

            android:hint="@string/post"

            android:text="@string/post"

            android:textColor="@color/black" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPost"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tvGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_10"
                android:hint="@string/gender"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_10"
                android:hint="@string/address"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tvPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_10"

                android:hint="@string/phone"
                android:textColor="@color/black"
                android:textSize="17sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/app_theme"
            android:elevation="5dp"
            android:text="@string/edit"
            app:cornerRadius="10dp" />
    </RelativeLayout>


</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>