<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgArrowBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dim_5"
        android:src="@drawable/arrow_back_24" />

    <TextView
        android:id="@+id/tvEnteremail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgArrowBack"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/enter_email"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvReceiveEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvEnteremail"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/receive_email"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etForgotPasswordEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvReceiveEmail"
        android:layout_marginStart="10dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="10dp"
        android:background="@color/edit_text_background"
        android:drawableLeft="@drawable/baseline_email_24"
        android:drawablePadding="5dp"
        android:drawableTint="@color/app_theme"
        android:hint="@string/email"
        android:padding="10dp"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etForgotPasswordEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/app_theme"
        android:padding="10dp"
        android:text="@string/reset"
        android:textSize="17sp" />
</RelativeLayout>
