<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:background="@color/app_theme">

    <TextView
        android:id="@+id/tvWelcomeback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/welcome_back"
        android:textColor="@color/app_theme_light"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dim_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcomeback">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="@dimen/dim_10"
            android:orientation="vertical">


            <EditText
                android:id="@+id/etLoginEmail"
                android:layout_width="@dimen/dim_390"
                android:layout_height="65dp"
                android:layout_marginTop="38dp"
                android:autofillHints=""
                android:background="@color/edit_text_background"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:drawableTint="@color/app_theme"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="text"
                android:paddingHorizontal="10dp"
                android:textAlignment="textStart" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                app:boxBackgroundMode="none"
                app:boxStrokeWidth="0dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/app_theme"
                app:startIconDrawable="@drawable/baseline_lock_24"
                app:startIconTint="@color/app_theme">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputLayoutEdittextPassword"
                    android:layout_width="@dimen/dim_390"
                    android:layout_height="wrap_content"
                    android:background="@color/edit_text_background"
                    android:inputType="textPassword"
                    app:boxStrokeWidth="0dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="140dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:layout_marginTop="12dp"
                android:text="@string/forgot_password"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="140dp"
                android:layout_height="55dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="6dp"
                android:backgroundTint="@color/app_theme"
                android:text="@string/login" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dim_10"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="160dp"
                    android:layout_height="30dp"
                    android:text="@string/dont_have_an_account"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvLoginSignup"
                    android:layout_width="50dp"
                    android:layout_height="32dp"
                    android:text="@string/signup"
                    android:textColor="#2196F3"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
