<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:background="@color/app_theme"
    android:orientation="vertical"
    tools:context=".Activity.SignupActivity">


    <TextView
        android:id="@+id/tvSignupRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/register"
        android:textColor="@color/app_theme_light"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="@dimen/dim_5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSignupRegistration"
        app:layout_constraintVertical_bias="1">

        <!--        <androidx.constraintlayout.widget.ConstraintLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:layout_gravity="center"-->
        <!--            android:textAlignment="center">-->

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/dim_10"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etSignupName"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="@dimen/dim_5"
                android:autofillHints="name"
                android:background="@color/edit_text_background"
                android:drawableStart="@drawable/person"
                android:drawablePadding="8dp"
                android:drawableTint="@color/app_theme"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:padding="10dp" />

            <EditText
                android:id="@+id/etSignupUsername"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="@dimen/dim_5"
                android:autofillHints="username"
                android:background="@color/edit_text_background"
                android:drawableStart="@drawable/person"
                android:drawablePadding="8dp"
                android:drawableTint="@color/app_theme"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:padding="10dp" />

            <EditText
                android:id="@+id/etSignupEmail"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginHorizontal="56dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="5dp"
                android:autofillHints=""
                android:background="@color/edit_text_background"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:drawableTint="@color/app_theme"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="text|textEmailAddress"
                android:padding="10dp"
                android:paddingHorizontal="10dp"
                android:textAlignment="textStart" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signupTextInputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="@dimen/dim_10"
                android:layout_marginEnd="5dp"
                android:background="@color/app_theme"
                android:backgroundTint="@color/edit_text_background"
                android:hint="@string/password"
                app:boxBackgroundMode="none"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/app_theme"
                app:helperTextEnabled="true"
                app:helperTextTextColor="@color/red"
                app:hintTextColor="@color/grey"
                app:startIconDrawable="@drawable/baseline_lock_24"
                app:startIconTint="@color/app_theme">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signupTextInputEditTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/edit_text_background"
                    android:inputType="textPassword"
                    app:boxStrokeWidth="0dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signupTextInputLayoutPasswordConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginStart="10dp"
                android:layout_marginTop="@dimen/dim_10"
                android:layout_marginEnd="5dp"
                android:hint="@string/confirm_password"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/app_theme"
                app:helperText=""
                app:helperTextEnabled="true"
                app:helperTextTextColor="@color/red"

                app:startIconDrawable="@drawable/baseline_lock_24"
                app:startIconTint="@color/app_theme"
                tools:layout_editor_absoluteX="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signupTextInputEditTextPasswordConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/edit_text_background"
                    android:inputType="textPassword"
                    tools:layout_editor_absoluteX="14dp"
                    tools:layout_editor_absoluteY="281dp" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btnSignup"
                android:layout_width="140dp"
                android:layout_height="55dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="1dp"
                android:backgroundTint="@color/app_theme"
                android:text="@string/signup" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dim_5"
                android:layout_marginBottom="@dimen/dim_5"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="160dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="@dimen/dim_5"
                    android:text="Already have a account?"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvSignupLogin"
                    android:layout_width="40dp"
                    android:layout_height="32dp"
                    android:text="Login"
                    android:textAlignment="center"
                    android:textColor="@color/app_theme"
                    android:textStyle="bold" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
